# league_of_clubs

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: django.yml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_selection_votes_alter_student_age_and_more.py
basic/: asgi.py  settings.py  urls.py  wsgi.py
election/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
election/migrations/: 0001_initial.py  0002_club_votes.py  0003_alter_student_choice.py  0004_alter_student_choice.py
league_of_clubs/: asgi.py  settings.py  urls.py  wsgi.py
