[tool.poetry]
name = "league-of-clubs"
version = "0.1.0"
description = ""
authors = ["kill-your-soul <Platonovdi@gmail.com>"]
readme = "README.md"
packages = [{include = "league_of_clubs"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.1"
djangorestframework = "^3.14.0"
pillow = "^9.5.0"
django-rest-swagger = "^2.2.0"
drf-yasg = {extras = ["validation"], version = "^1.21.5"}


[tool.poetry.dev-dependencies]
black = "^23.3.0"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
